--- a/src/main/resources/static/forgetPwd.html
+++ b/src/main/resources/static/forgetPwd.html
@@ -55,10 +55,10 @@
                         </el-row>
                         <el-row :gutter="24">
                             <el-col :span="6">
-                                <el-form-item label="验证码" prop="checkNum">
+                                <el-form-item label="验证码" prop="checkCode">
                                     <el-input v-model="user.checkNum"></el-input>
                                 </el-form-item>
-                                <el-button type="primary" size="small" @click="submit('form')">获取验证码</el-button>
+                                <el-button type="primary" size="small" @click="getCode">获取验证码</el-button>
                             </el-col>
                         </el-row>
                         <el-button type="primary" @click="submit('form')">提交</el-button>
@@ -94,20 +94,21 @@
                     callback()
                 }
         }
-         const checkNum = (rule,value,callback) => {
-                if(value <= 0 || value > 10000){
-                    callback(new Error("请输入一个1-10000的价格"))
-                }else{
-                    callback()
-                }
-            }
+         const checkEmail = (rule,value,callback) => {
+             if(this.user.email == '' || this.user.email == null){
+                 callback(new Error("请先输入正确的邮箱！"))
+             }else{
+                 callback()
+             }
+         }
             return {
                 user: {
                     loginName: "",
                     password: "",
                     repassword: "",
                     email: "",
-                    checkNum: "",
+                    checkCode: "",
+                    resultCode:""
                 },
                 rules:{
                 loginName:[
@@ -128,9 +129,9 @@
                     { required: true, message: '请输入邮箱', trigger: 'blur' },
                     { "pattern": /\w+@qq.com/, message: '请输入——@qq.com的邮箱格式', trigger: 'blur'},
                 ],
-                checkNum:[
+                 checkCode:[
                     { required: true, message: '请输入验证码', trigger: 'blur' },
-                    // { "pattern": /^[1-9]\d{0,5}\b/, message: '请输入不小于0的六位数以内的正整数', trigger: 'blur'},
+                     { validator:checkEmail, trigger:"blur" }
                 ]
             }
             };
@@ -152,15 +153,22 @@
                         alert("修改成功！")
                         window.location.href="Login.html"
                     }
-                }).catch((err) => {
-                    
-                });
+                })
                 } else {
-                    console.log('error submit!!');
                     return false;
                 }
         })
         },
+            getCode(){
+                axios.get('sendEmailCode',{
+                    params:{
+                        loginName:this.loginName
+                    }
+                }).then((result) => {
+                    console.log(result.data);
+                    this.resultCode = result.data;
+                })
+            }
     }
     })
 </script>
