--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,10 +28,11 @@
     <script type="text/javascript" src="js/tban.js"></script>
     
 	<script type="text/javascript" src="js/lrscroll_1.js"></script>
-    <script src="js/vue.js" type="text/javascript"></script>
-    <script src="js/axios.js" type="text/javascript"></script>
-    
-<title>尤洪</title>
+    <script src="js/vue.js"></script>
+    <script src="js/axios.js"></script>
+    <script src="js/element.js"></script>
+
+    <title>尤洪</title>
 </head>
 <body>
 <div id="app">
