--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -338,7 +338,7 @@
                                             <div class="h_icon"><img src="images/hot.png" width="50" height="50"/>
                                             </div>
                                             <div class="imgbg">
-                                                <a href="#"><img src="images/hot1.jpg" width="160"
+                                                <a href="#"><img :src="showImages(product.filePath)" width="160"
                                                                  height="136" /></a>
                                             </div>
                                             <div class="name">
@@ -381,49 +381,49 @@
             <div class="sell_right">
                 <div class="sell_1">
                     <div class="s_img"><a href="#"><img height="155" src="images/tm_1.jpg" width="185"/></a></div>
-                    <div class="s_price">￥<span>{{hotProduct[0].price}}</span></div>
+                    <div class="s_price">￥<span>{{specialSell[0].price}}</span></div>
                     <div class="s_name">
-                        <h2><a href="#">{{hotProduct[0].categoryName}}</a></h2>
+                        <h2><a href="#">{{specialSell[0].categoryName}}</a></h2>
                         倒计时：<span>1200</span> 时 <span>30</span> 分 <span>28</span> 秒
                     </div>
                 </div>
                 <div class="sell_2">
                     <div class="s_img"><a href="#"><img height="155" src="images/tm_2.jpg" width="185"/></a></div>
-                    <div class="s_price">￥<span>{{hotProduct[3].price}}</span></div>
+                    <div class="s_price">￥<span>{{specialSell[1].price}}</span></div>
                     <div class="s_name">
-                        <h2><a href="#">{{hotProduct[3].categoryName}}</a></h2>
+                        <h2><a href="#">{{specialSell[1].categoryName}}</a></h2>
                         倒计时：<span>1200</span> 时 <span>30</span> 分 <span>28</span> 秒
                     </div>
                 </div>
                 <div class="sell_b1">
                     <div class="sb_img"><a href="#"><img height="356" src="images/tm_b1.jpg" width="242"/></a></div>
-                    <div class="s_price">￥<span>{{hotProduct[5].price}}</span></div>
+                    <div class="s_price">￥<span>{{hotProduct[2].price}}</span></div>
                     <div class="s_name">
-                        <h2><a href="#">{{hotProduct[5].categoryName}}</a></h2>
+                        <h2><a href="#">{{specialSell[2].categoryName}}</a></h2>
                         倒计时：<span>1200</span> 时 <span>30</span> 分 <span>28</span> 秒
                     </div>
                 </div>
                 <div class="sell_3">
                     <div class="s_img"><a href="#"><img height="155" src="images/tm_3.jpg" width="185"/></a></div>
-                    <div class="s_price">￥<span>{{hotProduct[6].price}}</span></div>
+                    <div class="s_price">￥<span>{{specialSell[3].price}}</span></div>
                     <div class="s_name">
-                        <h2><a href="#">{{hotProduct[6].categoryName}}</a></h2>
+                        <h2><a href="#">{{specialSell[3].categoryName}}</a></h2>
                         倒计时：<span>1200</span> 时 <span>30</span> 分 <span>28</span> 秒
                     </div>
                 </div>
                 <div class="sell_4">
                     <div class="s_img"><a href="#"><img height="155" src="images/tm_4.jpg" width="185"/></a></div>
-                    <div class="s_price">￥<span>{{hotProduct[8].price}}</span></div>
+                    <div class="s_price">￥<span>{{specialSell[4].price}}</span></div>
                     <div class="s_name">
-                        <h2><a href="#">{{hotProduct[8].categoryName}}</a></h2>
+                        <h2><a href="#">{{specialSell[4].categoryName}}</a></h2>
                         倒计时：<span>1200</span> 时 <span>30</span> 分 <span>28</span> 秒
                     </div>
                 </div>
                 <div class="sell_b2">
                     <div class="sb_img"><a href="#"><img height="356" src="images/tm_b2.jpg" width="242"/></a></div>
-                    <div class="s_price">￥<span>{{hotProduct[9].price}}</span></div>
+                    <div class="s_price">￥<span>{{specialSell[5].price}}</span></div>
                     <div class="s_name">
-                        <h2><a href="#">{{hotProduct[9].categoryName}}</a></h2>
+                        <h2><a href="#">{{specialSell[5].categoryName}}</a></h2>
                         倒计时：<span>1200</span> 时 <span>30</span> 分 <span>28</span> 秒
                     </div>
                 </div>
@@ -1236,17 +1236,28 @@
             theThird: [],
             newsList: [],
             categoryProduct:[],
-            allTheSecond:[]
+            allTheSecond:[],
+            specialSell:[],
         },
         mounted() {
-            this.gethotProductList(1,10);
-            this.getCategoryProduct();
+            this.getSpecialSell(1,6);
+            this.getHotProduct();
+            this.getCategoryProduct()
             this.getAllTheSecond();
             this.firstLoad();
             this.showNews();
         },
         methods: {
-            gethotProductList(currentPageNo,pageSize) {
+            showImages(filePath){
+              axios.get("getImage",{
+                  params:{
+                      filePath:filePath
+                  }
+              }).then((result) => {
+                  console.log(result)
+              })
+            },
+            getSpecialSell(currentPageNo,pageSize) {
                 axios.get('getProductList', {
                     params: {
                         currentPageNo: currentPageNo,
@@ -1254,7 +1265,13 @@
                     }
                 }).then((result) => {
                     console.log(result.data)
-                    this.hotProduct = result.data.list
+                    this.specialSell = result.data.list
+                })
+            },
+            getHotProduct(){
+                axios.get('getHotProduct').then((result) => {
+                    console.log(result.data)
+                    this.hotProduct = result.data
                 })
             },
             getCategoryProduct() {
@@ -1263,7 +1280,7 @@
                     this.categoryProduct = result.data
                 })
             },
-            getAllTheSecond(currentPageNo,pageSize) {
+            getAllTheSecond() {
                 axios.get('getSecondAllCategories').then((result) => {
                     console.log(result.data)
                     this.allTheSecond = result.data.data
