--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -169,8 +169,8 @@
         <div class="logo"><a href="Index.html"><img src="images/logo.png"/></a></div>
         <div class="search">
             <form>
-                <input class="s_ipt" type="text" value=""/>
-                <input class="s_btn" type="submit" value="搜索"/>
+                <input class="s_ipt" type="text" v-model="searchValue"/>
+                <input class="s_btn" type="submit" @click="jumpSearch" value="搜索"/>
             </form>
             <span class="fl"><a href="#">咖啡</a><a href="#">iphone 6S</a><a href="#">新鲜美食</a><a href="#">蛋糕</a><a
                     href="#">日用品</a><a href="#">连衣裙</a></span>
@@ -707,6 +707,7 @@
             categoryProduct:[],
             allTheSecond:[],
             specialSell:[],
+            searchValue:''
         },
         mounted() {
             this.getSpecialSell(1,6);
@@ -785,6 +786,11 @@
                         console.log(resp.data);
                         this.newsList = resp.data.data;
                     });
+            },
+            jumpSearch() {
+                console.log(123)
+                window.location.href="CategoryList.html?name=" + this.searchValue
+                window.event.returnValue=false;
             }
 
         }
