--- a/src/main/resources/static/order/order.html
+++ b/src/main/resources/static/order/order.html
@@ -22,7 +22,7 @@
     <title>尤洪</title>
 </head>
 <body>
-<div id="app7">
+<div id="app9">
     <!--Begin Header Begin-->
     <div class="soubg">
         <div class="sou">
@@ -235,7 +235,7 @@
                 </div>
                 <a-table
                         :columns="columns"
-                        :data-source="AllNews"
+                        :data-source="AllOrders"
                         row-key="id"
                         :pagination="pagination"
                         @change="handleTableChange"
@@ -335,22 +335,21 @@
 
 <script type="text/javascript">
     new Vue({
-        el: '#app7',
+        el: '#app9',
         data:{
             title:"",
             columns: [
-                { title: "序号", dataIndex: "index", key: "index" },
-                { title: "标题", dataIndex: "title", key: "title" },
-                { title: "内容", dataIndex: "content", key: "content" },
-                { title: "简言", dataIndex: "shortTitle", key: "shortTitle" },
-                { title: "上架时间", dataIndex: "createTime", key: "createTime" },
+                { title: "订单号", dataIndex: "serialNumber", key: "serialNumber" },
+                { title: "订单时间", dataIndex: "createTime", key: "createTime" },
+                { title: "订单总金额", dataIndex: "content", key: "content" },
+                { title: "订单状态", dataIndex: "shortTitle", key: "shortTitle" },
                 {
                     title: "操作",
                     key: "action",
                     scopedSlots: { customRender: "action" },
                 },
             ],
-            AllNews: [],
+            AllOrder: [],
             pagination: {
                 showQuickJumper: true,
                 showTotal: (total, range) => {
