--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -396,13 +396,13 @@
                 </div>
                 <div class="sell_b1" @click="getProductDetail(specialSell[2].id)">
                     <div class="sb_img"><a href="#"><img height="356" :src="showImages(specialSell[2].filePath)" width="242"/></a></div>
-                    <div class="s_price">￥<span>{{hotProduct[2].price}}</span></div>
+                    <div class="s_price">￥<span>{{specialSell[2].price}}</span></div>
                     <div class="s_name">
                         <h2><a href="#">{{specialSell[2].categoryName}}</a></h2>
                         倒计时：<span>1200</span> 时 <span>30</span> 分 <span>28</span> 秒
                     </div>
                 </div>
-                <div class="sell_3" @click="getProductDetail(specialSell[4].id)">
+                <div class="sell_3" @click="getProductDetail(specialSell[3].id)">
                     <div class="s_img"><a href="#"><img height="155" :src="showImages(specialSell[3].filePath)" width="185"/></a></div>
                     <div class="s_price">￥<span>{{specialSell[3].price}}</span></div>
                     <div class="s_name">
