--- a/src/main/resources/static/order/order.html
+++ b/src/main/resources/static/order/order.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link type="text/css" rel="stylesheet" href="../css/style.css" />
     <link type="text/css" rel="stylesheet" href="../css/antd.css">
+    <link rel="stylesheet" href="../css/element.css">
     <!--[if IE 6]>
     <script src="../js/iepng.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -18,11 +19,13 @@
     <script src="../js/vue.js"></script>
     <script src="../js/axios.js"></script>
     <script src="../js/antd.js"></script>
+    <script src="../js/element.js"></script>
+
 
     <title>尤洪</title>
 </head>
 <body>
-<div id="app9">
+<div id="app10">
     <!--Begin Header Begin-->
     <div class="soubg">
         <div class="sou">
@@ -164,7 +167,7 @@
                             <div class="price"><font color="#ff4e00">￥{{item.price}}</font> X{{item.count}}</div>
                         </li>
                         <div class="price_sum">共计&nbsp; <font color="#ff4e00">￥</font><span>{{totalPrice}}</span></div>
-                        <div class="price_a"><a href="#">去购物车结算</a></div>
+                        <div class="price_a"><a href="BuyCar.html">去购物车结算</a></div>
                     </ul>
                     <div v-else class="un_login">
                         还未登录！<a href="../Login.html" style="color:#ff4e00;">马上登录</a> 查看购物车！
@@ -225,9 +228,8 @@
                 <div class="mem_tit">商品管理</div>
                 <div class="m_search" style="margin-left: 20px;margin-top: -6px;">
                     <div style="display: flex; justify-content: center;">
-                        <a-input type="text" v-model="title" placeholder="新闻名"></a-input>
-                        <a-button type="primary" @click="viewNewsList(1)">查询</a-button>
-                        <a href="news_add.html"><a-button type="primary">添加新闻</a-button></a>
+                        <a-input type="text" v-model="orderNumber" placeholder="订单号"></a-input>
+                        <a-button type="primary" @click="viewOrderList(1)">查询</a-button>
 
                     </div>
 
@@ -240,11 +242,48 @@
                         :pagination="pagination"
                         @change="handleTableChange"
                 >
+                    <div slot="status" slot-scope="text, record">
+                        <span v-if="text === 1" style="color: green">已支付</span>
+                        <span v-else-if="text === 0" style="color: red">未支付</span>
+                        <span v-else-if="text === 2" style="color: orange">已取消</span>
+                    </div>
                     <div slot="action" slot-scope="text, record">
-                        <span><a :href="'news_update.html?id=' + record.id">修改</a></span>
-                        <span><a @click="delNews(record.id)">删除</a></span>
+                        <span v-if="record.status === 1"><a @click="delOrder(record.id)">删除</a></span>
+                            <span v-else-if="record.status === 0">
+                                        <a @click="cancel(record.id)">取消</a>
+                                        <a @click="alipay_use(record.serialNumber)">去支付</a>
+                                        <span>{{send}}</span>
+                            </span>
+                        <span v-else-if="record.status === 2"><a @click="delOrder(record.id)">删除</a></span>
                     </div>
                 </a-table>
+
+                <div class="mem_tit">合并订单</div>
+                <table border="0" class="order_tab" style="width:930px;" cellspacing="0" cellpadding="0">
+                    <tr>
+                        <td width="135" align="right">主订单</td>
+                        <td width="220">
+                            <el-select  v-model="selectedOrder1" placeholder="请选择" @change="handleOrderChange">
+                                <el-option  v-for="order in otherOrders" :value="order.serialNumber">{{ order.serialNumber }}</el-option>
+                            </el-select>
+                        </td>
+                        <td width="135" align="right">从订单</td>
+                        <td width="220">
+                            <el-select  v-model="selectedOrder2" placeholder="请选择" @change="handleOrderChange">
+                                <el-option  v-for="order in otherOrders" :value="order.serialNumber">{{ order.serialNumber }}</el-option>
+                            </el-select>
+
+                        </td>
+                        <td><div class="btn_u"><a href="#" @click="combineOrders">合并订单</a></div></td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;</td>
+                        <td colspan="4" style="font-family:'宋体'; padding:20px 10px 50px 10px;">
+                            订单合并是在发货前将相同状态的订单合并成一新的订单。 <br />
+                            收货地址，送货方式等以主订单为准。
+                        </td>
+                    </tr>
+                </table>
         </div>
         <!--End 用户中心 End-->
         <!--Begin Footer Begin -->
@@ -330,26 +369,30 @@
         </div>
     </div>
 </div>
-
+</div>
 </body>
 
 <script type="text/javascript">
     new Vue({
-        el: '#app9',
+        el: '#app10',
         data:{
-            title:"",
+            selectedOrder1: null,
+            selectedOrder2: null,
+            shopName: "商品购物",
+            orderNumber:"",
             columns: [
                 { title: "订单号", dataIndex: "serialNumber", key: "serialNumber" },
-                { title: "订单时间", dataIndex: "createTime", key: "createTime" },
-                { title: "订单总金额", dataIndex: "content", key: "content" },
-                { title: "订单状态", dataIndex: "shortTitle", key: "shortTitle" },
+                { title: "下单时间", dataIndex: "createTime", key: "createTime" },
+                { title: "订单总金额", dataIndex: "cost", key: "cost" },
+                { title: "订单状态", dataIndex: "status", key: "status" ,scopedSlots: {customRender: "status"} },
                 {
                     title: "操作",
                     key: "action",
                     scopedSlots: { customRender: "action" },
                 },
             ],
-            AllOrder: [],
+            AllOrders: [],
+            otherOrders:[],
             pagination: {
                 showQuickJumper: true,
                 showTotal: (total, range) => {
@@ -365,12 +408,13 @@
                 id:null,
             },
             products:[],
+            selectedOrdersList:[],
 
         },
         methods: {
             handleTableChange(pagination, filters, sorter) {
                 this.pagination = pagination;
-                this.viewNewsList(pagination.current)
+                this.viewOrderList(pagination.current)
             },
             initLogin() {
                 let token=localStorage.getItem("token");
@@ -379,11 +423,14 @@
                         console.log(resp.data);
                         this.user.username=resp.data.data.userName
                         this.user.id=resp.data.data.id
+                        this.viewOrderList(1)
+                        this.initOtherOrders(this.user.id)
                     });
             },
-            initCat() {
+
+            async initCat() {
                 let token=localStorage.getItem("token");
-                axios.get('http://localhost:8080/getAllCats', {params: {token: token}})
+                await axios.get('http://localhost:8080/getAllCats', {params: {token: token}})
                     .then((resp) => {
                         console.log(resp.data);
                         this.products=resp.data.data
@@ -396,41 +443,94 @@
 
                     });
             },
-            viewNewsList(currentNo) {
-                axios.get('http://localhost:8080/getNewsListByPage',{params:{
+            async viewOrderList(currentNo) {
+                console.log(this.user.id)
+                await axios.get('http://localhost:8080/getOrderListByPage',{params:{
                         currentNo:currentNo,
-                        title:this.title,
+                        serialNumber:this.serialNumber,
+                        userId:this.user.id
                     }})
                     .then((resp) => {
                         console.log(resp.data)
-                        const pageSize = resp.data.pageSize;
-                        const startIndex = (currentNo - 1) * pageSize + 1;
-                        resp.data.list.forEach((news, index) => {
-                            order.index = startIndex + index;
-                        });
-                        this.AllNews = resp.data.list;
+                        this.AllOrders = resp.data.list;
                         this.pagination.current = resp.data.pageNum;
                         this.pagination.total = resp.data.total;
                         this.pagination.pageSize = resp.data.pageSize;
+
                     });
             },
-            delNews(id) {
-                if (!confirm("是否删除这个新闻")){
-                    return
-                }
-                axios.get('http://localhost:8080/delNews', {params: {id: id}})
+            async initOtherOrders(id) {
+                console.log(this.user.id)
+                await axios.get('http://localhost:8080/getAllOrders', {params: {userId:id}})
                     .then((resp) => {
                         console.log(resp.data);
-                        this.viewNewsList(1)
+                        this.otherOrders = resp.data.data;
+                    });
+            },
+            delOrder(id) {
+                if (!confirm("是否删除这个订单")){
+                    return
+                }
+                axios.get('http://localhost:8080/delOrder', {params: {id: id}})
+                    .then((resp) => {
+                        console.log(resp.data);
+                        this.viewOrderList(1)
+
+                    });
+            },
+
+            cancel(id){
+                axios.get('http://localhost:8080/updateOrderStatusWithCancel', {params: {id: id}})
+                    .then((resp) => {
+                        console.log(resp.data);
+                        if (resp.data.code===200){
+                            let order = this.AllOrders.find(order => order.id === id);
+                            if (order) {
+                                order.status = 2;
+                            }
+                        }
+                    });
+            },
+
+            async alipay_use(serialNumber) {
+                event.preventDefault();
+                try {
+                    const resp = await axios.get('http://localhost:8080/createOrder', {
+                        params: {
+                            price: this.totalPrice,
+                            shopName: this.shopName,
+                            serialNumber: serialNumber
+                        }
+                    });
+                    console.log(resp.data);
+                    document.write(resp.data);
+                } catch (error) {
+                    console.error(error);
+                }
+            },
+            handleOrderChange() {
+                const order1= this.otherOrders.find(order => order.serialNumber === this.selectedOrder1);
+                const order2 = this.otherOrders.find(order => order.serialNumber === this.selectedOrder2);
+                this.selectedOrdersList= [order1];
+                if (order2) {
+                    this.selectedOrdersList.push(order2);
+                }
+            },
+
+            combineOrders() {
+                axios.post('http://localhost:8080/combineOrder',this.selectedOrdersList )
+                    .then((resp) => {
+                        console.log(resp.data);
 
                     });
             },
         },
+
         mounted() {
             this.initLogin()
             this.initCat()
-            this.viewNewsList(1)
-        }
+        },
+
     })
 </script>
 
